--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -29,7 +29,7 @@
   background-position: center;
   background-size: contain;
   opacity: 0.4;
-  color: #fff;
+  color: $light-color;
   font-size: 18px;
   &:hover {
     opacity: 1;
