--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,5 +1,3 @@
-$light-color: #fff;
-
 header {
   background: url("https://quantox.com/assets/img/quantox-logo-bkg.png");
   position: relative;
@@ -9,7 +7,6 @@ header {
     z-index: 999;
     width: 100vw;
     color: #fff;
-
     .logo {
       padding-left: 40px;
     }
@@ -20,6 +17,12 @@ header {
       letter-spacing: 0.15em;
       .languages {
         padding: 15px;
+        @include media-md {
+          display: none;
+          img {
+            padding: 0;
+          }
+        }
         a {
           text-decoration: none;
           color: #fff;
@@ -53,8 +56,23 @@ header {
       a {
         place-self: end center;
         margin-bottom: 10vh;
-        i {
-          width: 50px;
+        .mouse {
+          height: 42px;
+          width: 24px;
+          border-radius: 14px;
+          transform: none;
+          border: 2px solid white;
+          .mouse__dot {
+            content: "";
+            width: 5px;
+            height: 5px;
+            position: relative;
+            top: 5px;
+            background: #fff;
+            left: 50%;
+            transform: translateX(-50%);
+            border-radius: 50%;
+          }
         }
       }
       h1 {
@@ -66,6 +84,15 @@ header {
         place-self: end center;
         animation: typing 3.5s steps(30, end),
           blink-caret 0.75s step-end infinite;
+      }
+      @include media-md {
+        font-size: 1em;
+      }
+      @include media-lg {
+        font-size: 2em;
+      }
+      @include media-xl {
+        font-size: 2.5em;
       }
     }
   }
