Fixed some minor issues

--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -75,7 +75,7 @@ footer {
     }
   }
   .foot__copy {
-    background: #fff;
+    background-color: #fff;
     text-align: center;
     a {
       color: $primary-color;
